Fix for rows past the first collapsing

--- a/www/css/main.css
+++ b/www/css/main.css
@@ -55,7 +55,7 @@ html
 	padding: 1rem;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(600px, 1fr));
-	grid-template-rows: repeat(auto-fit, var(--sound-height));
+	grid-auto-rows: var(--sound-height);
 	row-gap: 1rem;
 	column-gap: 1rem;
 	width: 100%;
